--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "draft-js": "^0.11.7",
+    "json-as-xlsx": "^2.1.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "notistack": "^1.0.10",
