--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-viewer": "^1.2.1",
+    "react-ga": "^3.3.0",
     "react-highlight-words": "^0.17.0",
     "react-icons": "^4.3.1",
     "react-loadingg": "^1.7.2",
